[package]
name = "meowi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arboard = "3.5.0"
async-stream = "0.3.6"
clipboard = "0.5.0"
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.31"
ratatui = "0.29.0"
regex-lite = "0.1.6"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
overflow-checks = false
debug = false
debug-assertions = false
panic = "abort"
strip = true 


